# OpenMedAxis

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
oma/: __init__.py  trainer.py
oma/data/datamodule/: base.py  datamodules.py
oma/data/datasets/: base.py  numpy_dataset.py
oma/data/recipes/: base.py  brats.py  ixi.py
oma/evaluation/: manager.py
oma/evaluation/evaluators/: __init__.py  base.py  image.py
oma/evaluation/metrics/: __init__.py  basic.py  reconstruction.py
oma/losses/: README.md  __init__.py  base.py  composer.py
oma/losses/recipes/: __init__.py  autoencoder.py
oma/losses/terms/: __init__.py  adversarial.py  gated.py  perceptual.py  pixel.py  regularization.py  snr_weighted.py
oma/methods/: __init__.py  autoencoder.py  base.py  diffusion_bridge_translation.py  translation.py
oma/methods/diffusion/: __init__.py  base.py  bridge.py  gaussian.py
oma/methods/diffusion/components/: __init__.py  objective.py
oma/methods/diffusion/components/processes/: base.py  gaussian.py  i2sb.py  selfrdb.py  vesde.py
oma/methods/diffusion/components/samplers/: base.py  ddim.py  ddpm.py  langevin.py
oma/methods/diffusion/components/time_samplers/: __init__.py  base.py  importance.py  uniform.py
oma/models/: __init__.py
oma/models/autoencoder/: ae_kl.py
oma/models/diffusion/: bridge.py
oma/models/ldm/modules/diffusionmodules/: model.py
recipes/diffusion_bridge_translation/: train.py
